# cpp-zoo

./: CMakeLists.txt  README.md  a.out  animal.cpp  animal.h  birds.h  clownfish.cpp  clownfish.h  dog.cpp  dog.h  fish_and_sea_creatures.cpp  fish_and_sea_creatures.h  goose.cpp  goose.h  ibirds.cpp  ibirds.h  ifish_and_sea_creatures.cpp  ifish_and_sea_creatures.h  imammals.cpp  imammals.h  lion.cpp  lion.h  main.cpp  mammals.cpp  mammals.h  monkey.cpp  monkey.h  shark.cpp  shark.h  snowy_owl.cpp  snowy_owl.h  whale.cpp  whale.h  zoo.h
